overflow fixed mayb

--- a/style.css
+++ b/style.css
@@ -127,5 +127,8 @@ h1, h2, h3, h4 {
     float: right;
     padding-left: 1vw;
    }
-
+   body {
+    overflow-x: hidden;
+    overflow-y: auto;
+   }
 }
